gcc/testsuite/rust/rustc/ui/fail-simple.rs
fn main() {
    panic!(@); // { dg-error "" "" { target *-*-* } }
}

